--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
     "devDependencies": {
         "gh-pages": "^3.1.0"
     },
-    "homepage": "http://lpodema.github.io/rewards-store"
+    "homepage": "http://lpodema.github.io/reward-store"
 }
