agregado redireccionamiento de cualquier url a login/main según corresponda y cambio de reward store a rewards store

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Reward Store",
-    "name": "Emanuel Porres' Reward Store",
+    "short_name": "Rewards Store",
+    "name": "Emanuel Porres' Rewards Store",
     "start_url": ".",
     "display": "standalone",
     "theme_color": "#000000",
